--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "16.12.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^4.3.3",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.1.3"
   }
