--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
