--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^4.3.3",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.1.3"
   }
