--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
+    "formik": "^2.0.6",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
