--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "geolib": "^3.1.0",
     "mongoose": "^5.7.12",
     "multer": "^1.4.2"
   },
