--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "formik": "^2.0.6",
+    "framer-motion": "^1.6.17",
     "next": "9.1.4",
     "react": "16.12.0",
+    "react-animations": "^1.0.0",
     "react-dom": "16.12.0"
   },
   "devDependencies": {
