--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
+    "dotenv-load": "^2.0.0",
     "formik": "^2.0.6",
     "framer-motion": "^1.6.17",
     "next": "9.1.4",
+    "next-env": "^1.1.0",
     "react": "16.12.0",
-    "react-animations": "^1.0.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "react-spinkit": "^3.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^4.3.3",
